Fixed all layout issues.
Fixed the animation queue buildup problems simply with .stop(). Added the slide
animations for the section navigations and they're looking good. Had to an
enclosing div called #picwindowshade around the #picwindow in order to achieve
sliding the menu up without the background image getting squished weirdly.
Everything seems good now; just need to add the content and then the subsection
links!

--- a/main-layout.css
+++ b/main-layout.css
@@ -35,11 +35,15 @@ h1 {
 #picwindow {
   height: 350px;
   width: 350px;
-  margin: 1em auto;
+  margin: 0 auto;
   border-radius: 50%;
   background-image: url("img/home-pics-white.jpg");
   background-repeat: no-repeat;
   background-position: 0 0;
+}
+
+#picwindowshade {
+  margin: 1em auto;
 }
 
 /* Navigation menu */
